[PE] Don't clip a drag image to the viewport unless it is larger than the viewport.

The clipping is applied only as a protection against images being
so big they are a memory or IPC payload issue. Furthermore,
when drag images are specified, the drag image may be offscreen.

Bug: 798704
Change-Id: I4015f6daa61d5e0504968952d0c530adfe926eef
Reviewed-on: https://chromium-review.googlesource.com/851732
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527324}
Former-commit-id: 0fca210a0133dfcdda8b2dcc1e7e9c84a5b10edd